--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "description": "",
   "homepage": "https://stackblitz.com/edit/react-ix4eyx",
   "dependencies": {
+    "firebase": "5.0.3",
+    "joi-browser": "^13.4.0",
     "react": "16.1.1",
     "react-dom": "16.1.1",
-    "react-scripts": "1.0.10",
-    "firebase": "5.0.3"
+    "react-scripts": "1.0.10"
   },
   "version": "0.1.0",
   "private": true,
